--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs": "0.0.1-security",
     "multer": "^1.4.1",
     "path": "^0.12.7",
+    "python-shell": "^1.0.7",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
