--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # data
+/data/runs/*
 /data/*.json
 /data/metadata-files/*.csv
 /data/corpus-files/*
