--- a/package.json
+++ b/package.json
@@ -3,36 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@devexpress/dx-react-chart": "^1.11.0",
-    "@devexpress/dx-react-chart-material-ui": "^1.11.0",
-    "@devexpress/dx-react-core": "^1.11.0",
-    "@loadable/component": "^5.10.1",
-    "@material-ui/core": "^3.9.3",
+    "@devexpress/dx-react-chart": "^1.11.2",
+    "@devexpress/dx-react-chart-material-ui": "^1.11.2",
+    "@devexpress/dx-react-core": "^1.11.2",
+    "@loadable/component": "^5.12.0",
+    "@material-ui/core": "^3.9.4",
     "@material-ui/icons": "^3.0.2",
     "@material/linear-progress": "^1.1.0",
-    "axios": ">=0.18.1",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "chart.js": "^2.8.0",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "multer": "^1.4.1",
+    "multer": "^1.4.2",
     "path": "^0.12.7",
-    "python-shell": "^1.0.7",
-    "react": "^16.8.6",
-    "react-chartjs-2": "^2.7.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "python-shell": "^1.0.8",
+    "react": "^16.12.0",
+    "react-chartjs-2": "^2.9.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
-    "react-scripts": "^3.0.1"
+    "@babel/preset-react": "^7.8.3",
+    "jest": "^25.1.0",
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "node index.js",
     "start-static": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject",
     "s3:create-bucket": "aws s3 mb s3://$BUCKET",
     "s3:configure-bucket": "aws s3 website s3://$BUCKET --index-document index.html --error-document index.html",
