Add another test

--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.8.3",
-    "jest": "^25.1.0",
     "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "node index.js",
     "start-static": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "s3:create-bucket": "aws s3 mb s3://$BUCKET",
     "s3:configure-bucket": "aws s3 website s3://$BUCKET --index-document index.html --error-document index.html",
